tests/negative_pomidory/key_presses.pomidor
App Name:
Version:
Release date:

Sprint:

!!test_pomidor_PomidorDataFeedNoAngleKeysProvided!!
@feature csv_data3
@prereq google_search
@param max_window, auto_scroll, delete_cookies
@data
First, clicked on login_field #practice_menu_button page title wait #1
Then, click on #male_rb, seconds and make sure that #female_rb is selected.
and typed [[text-1]]in #phone_field. Wait for #1 seconds. Then, typed [[some
free text]] in #name_field and press #ARROW_LEFT and press #NUMPAD9 wait #0.2 seconds


